# Breezability

./: Assem2.DWG  Door2D.SLDPRT  Door3D.SLDPRT  README.md  Wall2D.SLDPRT  Wall3D.SLDPRT  baseforwall.DWG
app/: layout.tsx  page.tsx
components/: header.tsx
scripts/: Servo_temp.ino  backend.py  pyproject.toml  serial_reader.py
