[project]
name = "smart-window-backend"
version = "0.1.0"
description = "Backend for Smart Window Opener - reads Arduino serial data and exposes via API"
requires-python = ">=3.9"
dependencies = [
    "pyserial>=3.5",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
